<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/menu"/>


        <item
            android:id="@+id/nav_home"
            android:color="@color/colorPrimary"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_buscar"
            android:color="@color/colorPrimary"
            android:title="@string/buscar_dilig_ncias" />
        <item
            android:id="@+id/nav_sobre"
            android:color="@color/colorPrimary"
            android:title="@string/sobre" />
        <item
            android:id="@+id/nav_diligencias"
            android:color="@color/colorPrimary"
            android:title="@string/minhas_dilig_ncias" />
        <item
            android:id="@+id/nav_condicoes"
            android:color="@color/colorPrimary"
            android:title="@string/termos_e_condi_es" />
        <item
            android:id="@+id/nav_sair"
            android:color="@color/colorPrimary"
            android:title="@string/sair" />
    </group>

</menu>
