<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@drawable/gradiente">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <Button
        android:id="@+id/btnEntrar"

        android:layout_width="350dp"
        android:layout_height="55dp"


        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/buttonshape2"
        android:drawableLeft="@drawable/right"
        android:drawablePadding="3dp"
        android:onClick="proximaTelaexercicioMaps"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/entrar"
        android:textColor="@color/colorLetras"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/acesse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/esqueceuSenha" />

    <Button
        android:id="@+id/google"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="25dp"
        android:background="@color/colorPrimary"
        android:drawableTop="@drawable/google"
        android:textColor="@color/colorLetras"
        app:layout_constraintBottom_toTopOf="@+id/cadastre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toBottomOf="@+id/acesse" />

    <Button
        android:id="@+id/facebook"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:drawableBottom="@drawable/facebbok"
        app:layout_constraintBottom_toTopOf="@+id/cadastre"
        app:layout_constraintEnd_toStartOf="@+id/google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acesse"
        app:layout_constraintVertical_bias="0.518" />

    <Button
        android:id="@+id/esqueceuSenha"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="300dp"
        android:background="@android:color/transparent"
        android:text="@string/esqueceu_a_sua_senha"
        android:textColor="@color/colorLetras"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cadastre"
        android:layout_width="342dp"
        android:layout_height="20dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/transparent"
        android:onClick="proximaTelaCadastrar"
        android:text="@string/n_o_cadastrado_cadastre_se"
        android:textColor="@color/colorLetras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google" />

    <TextView
        android:id="@+id/acesse"
        android:layout_width="130dp"
        android:layout_height="34dp"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ou_acesse"
        android:textColor="@color/colorLetras"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="21dp"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="32dp"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/esqueceuSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />
</androidx.constraintlayout.widget.ConstraintLayout>